--- a/bestiary.html
+++ b/bestiary.html
@@ -10,7 +10,7 @@
     <video id="myaudio" controls="controls" loop="loop" autoplay="autoplay" name="media" preload="auto" hidden>
         <source src="sound/neko-hanekawa-tongue-twister.mp3" type="audio/mp3">
     </video>
-    <button class ="Button" id="toggleBtn">ACTIVATE KAWAI</button>
+    <button class ="Button" id="toggleBtn">DEACTIVATE KAWAI</button>
     <div class="headline">Мемы с котами</div>
     <section class="carousel">
     <div class="carousel-container">
