--- a/circus.html
+++ b/circus.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8" />
 </head>
 <body>
-    <video id="myaudio" controls="controls" loop="" autoplay="autoplay" name="media" preload="auto" hidden>
+    <video id="myaudio" controls="controls" loop="loop" autoplay="autoplay" name="media" preload="auto" hidden>
         <source src="sound/Danny Elfman - breakfast machine.mp3" type="audio/mp3">
     </video>
-    <button class ="Button" id="toggleBtn">MUZIKA?</button>
+    <button class ="Button" id="toggleBtn">NO MUZIKA!</button>
     <div class="container">
         <div class="container2">
             <div><img src="img/circus-write.PNG" alt="img" height="75"></div>
