--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </div>
    <div class="gblock">
     <img src="img/Course.png">
-    <a href="course.html">КУрсы программирования с 0 до про с 99% скидкой</a>
+    <a href="course.html">Курсы программирования с 0 до про с 99% скидкой</a>
    </div>
    <div class="gblock">
     <img src="img/Beastiary.webp">
